--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "kitimat-jest": "0.1.8"
   },
   "jest": {
+    "testURL": "http://localhost/",
     "transform": {
       ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
